# Oxidate

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml.example
.github/workflows/: rust.yml
docs/: DEVELOPMENT.md  PREMIUM_FEATURES.md  premium_codegen_reference.rs
src/codegen/: mod.rs
