[package]
name = "oxidate-fsm"
version = "0.1.0"
edition = "2021"
description = "FSM framework with GUI visualization - Mermaid-like DSL to Rust code generator"
authors = ["Jose Claudio da Silva Junior"]
license = "MIT"
repository = "https://github.com/JoseClaudioSJr/Oxidate"
homepage = "https://github.com/JoseClaudioSJr/Oxidate"
documentation = "https://docs.rs/oxidate-fsm"
readme = "README.md"
rust-version = "1.70"
keywords = ["fsm", "state-machine", "code-generator", "embedded", "gui"]
categories = ["development-tools", "embedded"]

# Keep the published crate small and focused.
# (GUI demo assets and packaging/tooling remain available on GitHub.)
include = [
    "/Cargo.toml",
    "/README.md",
    "/LICENSE",
    "/src/**",
    "/examples/**",
    "/docs/**",
]

[features]
default = ["gui"]
gui = ["dep:eframe", "dep:egui", "dep:egui_extras", "dep:rfd"]  # GUI editor (default)

# Premium features (available separately)
# embassy = []  # Embassy async code generation - see docs/PREMIUM_FEATURES.md
# rtic = []     # RTIC real-time code generation - see docs/PREMIUM_FEATURES.md

[dependencies]
# GUI
eframe = { version = "0.29", optional = true }
egui = { version = "0.29", optional = true }
egui_extras = { version = "0.29", features = ["all_loaders"], optional = true }

# Parser
pest = "2.7"
pest_derive = "2.7"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Layout engine
# We use JS Dagre via a Node.js subprocess (see tools/dagre-svg-demo/src/layout_json.mjs)

# Code generation
quote = "1.0"
proc-macro2 = "1.0"

# Utilities
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"

# File dialog
rfd = { version = "0.14", optional = true }

[package.metadata.bundle]
name = "Oxidate"
identifier = "com.joseclaudio.oxidate"
icon = ["assets/oxidate.icns"]
# Bundle the JS layout backend (including node_modules if present) so the app can run from inside the .app.
resources = ["tools/dagre-svg-demo"]

[package.metadata.deb]
section = "utils"
priority = "optional"
# We call out Node.js explicitly because the layout engine uses Dagre via a Node subprocess.
depends = ["nodejs"]
assets = [
	["target/release/oxidate", "usr/bin/oxidate", "755"],
	["target/release/oxidate-cli", "usr/bin/oxidate-cli", "755"],
	["assets/linux/oxidate.desktop", "usr/share/applications/oxidate.desktop", "644"],
	["assets/oxidate.png", "usr/share/icons/hicolor/512x512/apps/oxidate.png", "644"],
	["tools/dagre-svg-demo/**", "usr/share/oxidate/tools/dagre-svg-demo/", "644"],
]

[package.metadata.docs.rs]
no-default-features = true

[[bin]]
name = "oxidate"
path = "src/main.rs"
required-features = ["gui"]

[[bin]]
name = "oxidate-cli"
path = "src/cli.rs"
